--- a/src/components/ProviderLogo/ProviderLogo.css
+++ b/src/components/ProviderLogo/ProviderLogo.css
@@ -1,8 +1,8 @@
 .provider-logo {
-  display: inline-block;
+  display: block;
   flex-shrink: 0;
-  vertical-align: middle;
   user-select: none;
   -webkit-user-drag: none;
   object-fit: contain;
+  object-position: center;
 }
